# once.releaser

./: .pre-commit-config.yaml  CHANGES.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
news/: internal.bugfix
once/releaser/: __init__.py  towncrier.py
